# sandbox-gamedev

./: .clang-format  .gitattributes  README.md
comp4300_game_programming/: .editorconfig  .gitignore  README.md  conanfile.txt  gen.ps1  premake5.lua
comp4300_game_programming/AssignmentOne/: README.md  config.txt  main.cpp  premake5.lua
comp4300_game_programming/AssignmentTwo/: Components.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Game.cpp  Game.h  Math.h  README.md  Vec2.cpp  Vec2.h  config.txt  main.cpp  premake5.lua
comp4300_game_programming/Intro/: Main.cpp  README.md  config.txt  main.cpp  premake5.lua
comp4300_game_programming/SFMLBasicShapes/: main.cpp  premake5.lua
comp4300_game_programming/SFMLBasicShapes2D/: Math.h  main.cpp  premake5.lua
comp4300_game_programming/SFMLSolarSystem/: main.cpp  premake5.lua
godot-2d-action-rpg/: .gitignore  CHANGELOG.md  README.md  Settings.VSMonoDebugger.json  default_env.tres  godot-2d-action-rpg.csproj  godot-2d-action-rpg.csproj.old  godot-2d-action-rpg.sln  godot-2d-action-rpg.sln.old  icon.png.import  project.godot
godot-2d-action-rpg/Assets/Effects/: EnemyDeathEffect.png.import  GrassEffect.png.import  (+1 more)
godot-2d-action-rpg/Properties/: AssemblyInfo.cs
godot-2d-action-rpg/Source/: World.tscn
opengl-arcanoid/: CMakeLists.txt  README.md  build-clang.ps1  build-cmake.ps1  build-mingw.ps1
opengl-arcanoid/include/: arch.cmake
opengl-arcanoid/lib32/: glew32.lib
opengl-arcanoid/lib64/: glew64.lib
opengl-arcanoid/src/: Makefile  ar.cpp  ball.cpp  ball.h  brick.h  vars.h
(+58 files in other folders)
